manifests/base/network-policies/flink-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flink-demo
  labels:
    istio.io/dataplane-mode: ambient
